...
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/iconImgDescription"
        app:srcCompat="@drawable/icon"/>

    <EditText
        android:id="@+id/loginScreenID"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/loginScreenPW"
        android:layout_below="@+id/iconImageView"
        android:layout_marginTop="32dp"
        android:background="#00ffffff"
        android:drawableStart="@drawable/ic_action_name"
        android:ems="10"
        android:hint="Id"
...
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textSize="16sp"/>

    <android.support.v7.widget.CardView
        android:id="@+id/loginCardView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="104dp"
        app:cardBackgroundColor="@color/colorAccent"
...
