...
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/title_class"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/rating"
...
