<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/quizcontainer"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/QuizScrollView"
        android:background="@color/blue"
        android:layout_marginBottom="40dp">

        <LinearLayout
            android:id="@+id/quizContainerLinearLayout"
            android:layout_width="match_parent"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/quizlinearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:id="@+id/quizsubmitbutton"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:padding="15dp"
                android:textColor="@android:color/white"
                android:layout_margin="20dp"
                android:background="@drawable/buttonbackground"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
