<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/quizItemLinearLayout"
    android:layout_height="match_parent"
    android:background="@drawable/questionbackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/quizquestion"
...
        android:padding="40dp"
        android:textSize="20dp"
        android:text="testing"
        android:textColor="@android:color/white" />

    <RadioGroup
        android:id="@+id/quizradiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="50dp">

        <RadioButton
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/quizOption4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:textColor="@android:color/white" />

    </RadioGroup>
...
